--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav>This is a nav tag</nav>
-    <main>
-    <h1 id="title" alt="Tribute person's name">This is a tribute page</h1>
-        <div id="img-div">
-            <img id="image" src="" alt="">
-            <p id="img-caption">Image caption</p>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1 id="nav-name">Earl<span>The Goodest Boy</span></h1>
+      <nav>
+        <ul>
+          <li><a href="#">Yorkies</a></li>
+          <li><a href="#">Pics</a></li>
+          <li><a href="#">Tribute</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="container">
+      <h1 id="title" alt="Tribute person's name">Sir Earl Yorkshire Terrier</h1>
+      <div id="img-div">
+        <img id="image" src="./earl.jpg" alt="yorkie puppy with batman bandana" />
+        <p id="img-caption">Image caption</p>
+      </div>
+      <div id="tribute-info">
+        description of the page subject information goes here
+        <div>
+          <a id="tribute-link" target="_blank" href="">Link</a>
         </div>
-        <div id="tribute-info">description of the page subject information goes here
-           <div>
-            <a id="tribute-link" target="_blank" href="">Link</a>
-        </div>
-        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
